# blackout-tracker-mcp

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE_CODE_SETUP.md  Dockerfile  README.md  TODO.md  battery_info.sh  debug_page_structure.py  docker-compose.yml  dtek_page.html  dtek_with_schedule.html  mcp.json  pyproject.toml  requirements.txt  test_fill_form.py  test_save_html.py  test_visible.py  watch_notifications.sh
src/: battery.py  config.py  i18n.py  monitor_outages_daemon.py  monitoring.py  parser.py  server.py  server.py.backup
src/translations/: en.json  uk.json
tests/: test_apostrophe_normalization.py  test_auto_monitoring.py  test_auto_refresh_stale_cache.py  test_calculate_charging.py  test_e2e.py  test_form_inspector.py  test_hourly_outage_slots.py  test_i18n.py  test_mcp_server.py  test_mcp_tools.py  test_next_outage_timing.py  test_notifications.py  test_ongoing_outage_notification_bug.py  test_parser_unit.py  test_possible_schedules.py  test_save_html.py
